# py-files

./: README.md  main.py  pyproject.toml  requirements.txt
.vim/: coc-settings.json
classes/: InputValidator.py  Select.py
modules/: findFile.py  findInFiles.py  getListDir.py  renameFiles.py  replaceInFiles.py
tests/: test_input_validator.py
utils/: getAttachedDirs.py  getExcludedDirs.py  getFileData.py  showOccuriences.py  showOccurrences.py
